k8s/n8n/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n
  namespace: n8n
spec:
  ingressClassName: traefik
  tls:
    - secretName: n8n-certs
  rules:
    - host: n8n.fedora.tailf20727.ts.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: n8n
                port:
                  number: 5678
